--- a/mdb/config.toml
+++ b/mdb/config.toml
@@ -1,3 +1,9 @@
+[server]
+bind-address=":8080"
+mode="debug"  # GIN mode. Either debug, release or test
+rollbar-token=""
+rollbar-environment="development"
+
 [mdb]
 url="postgres://postgres/mdb?sslmode=disable&user=postgres"
 
